# md_converter

./: .gitignore  README.md  app.py  convert.py  pyproject.toml
.claude/: CLAUDE.md  PRIMER.md
.streamlit/: config.toml
docs/: ANKI_IMPORT_GUIDE.md
docs/superpowers/plans/: 2026-03-28-pdf-to-markdown-converter.md  2026-03-29-anki-streamlit.md
docs/superpowers/specs/: 2026-03-29-anki-streamlit-design.md
md_converter/: anki_exporter.py  anki_generator.py  anki_validator.py  cleaner.py  cli.py  detector.py  extractor.py  ocr.py  optimizer.py  pipeline.py  renderer.py  reporter.py  structure.py
tests/: conftest.py  test_anki_exporter.py  test_anki_generator.py  test_anki_validator.py  test_app.py  test_cleaner.py  test_detector.py  test_extractor.py  test_integration.py  test_optimizer.py  test_renderer.py  test_structure.py
tests/fixtures/: create_fixtures.py
