[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-converter"
version = "0.1.0"
description = "AI-oriented PDF to Markdown converter"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "tiktoken>=0.7.0",
    "click>=8.1",
    "rich>=13.7",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
]

[project.scripts]
md-converter = "md_converter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["md_converter*"]
